--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
-    "run": "ts-node ./src/ | pino-pretty",
+    "run": "tsx src/index.ts | pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@types/node": "^22.10.5",
     "pino-pretty": "^13.0.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.7.3"
   }
 }
